# GTPrivateServer

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
cmake/: FindMariaDB.cmake  Findbrotli.cmake  Finduv.cmake
conan/: conan.cmake
conan/redis-plus-plus/all/: CMakeLists.txt  conanfile.py
conan/redis-plus-plus/all/patches/: 1.3.3-fix-conan-cmake-package.patch
mysql-schema/: gtps.sql
patch/redis++/: CMakeLists.txt
scripts/: accounts.h  ddl2cpp.py  player_accounts.sql
src/: CMakeLists.txt  config.h  config.sample.h  main.cpp  server.cpp
src/cluster/: child.cpp  child.h  cluster.cpp  cluster.h  eventemitter.h  primary.cpp  primary.h  worker.cpp  worker.h
src/database/: database.h  guests.h  postgres.cpp  postgres.h  server_information.h  worlds.h
src/database/player/: accounts.h  accounts_.h
src/enetwrapper/: enet_server.cpp  enet_server.h  enet_wrapper.cpp  enet_wrapper.h  enetserver.cpp  enetserver.h
src/event/: all_events.cpp  event_context.h  event_pool.cpp  event_pool.h
src/event/tank/: state.cpp  state.h
src/event/text/: enter_game.cpp  enter_game.h  join_request.cpp  join_request.h  quit_to_exit.cpp  quit_to_exit.h  refresh_item_data.cpp  refresh_item_data.h  requested_name.cpp  requested_name.h
src/http/: http.cpp  http.h
src/include/: randutils.hpp
src/include/backtrace-cpp/: backtrace.hpp
src/include/dio/: dio.hpp
src/item/: item_info.cpp  item_info.h  itemdb.cpp  itemdb.h
src/items/: iteminfo.h  itemsdb.cpp  itemsdb.h
src/logger/: logger.cpp  logger.h
src/mariadb/: conn.h
src/player/: eventcontext.h  eventmanager.cpp  eventmanager.h  eventtrigger.cpp  eventtrigger.h  generictextevent.cpp  generictextevent.h  inventory.h  packet.h  peer.cpp  peer.h  player.cpp  player.h  player_pool.cpp  player_pool.h  playerpool.cpp  playerpool.h
src/player/events/tank/: set_icon_state.cpp  set_icon_state.h  state.cpp  state.h  tile_change_request.cpp  tile_change_request.h
src/player/events/text/: enter_game.cpp  enter_game.h  input.cpp  input.h  join_request.cpp  join_request.h  quit.cpp  quit.h  quit_to_exit.cpp  quit_to_exit.h  refresh_item_data.cpp  refresh_item_data.h  requestedName.cpp  requestedName.h
src/proton/shared/manager/: VariantDB.h
src/proton/shared/util/: ResourceUtils.cpp  ResourceUtils.h  Variant.cpp  Variant.h
src/server/: http.cpp  http.h  loadbalancer.cpp  loadbalancer.h  loadbalancing.h  server.cpp  server.h  servergateway.cpp  servergateway.h  serverpool.cpp  serverpool.h
src/utils/: binary_writer.h  event_emitter.h  hash.h  math.h  random.h  text_parse.h  textparse.h
src/world/: object.h  tile.cpp  tile.h  tile_extra.cpp  tile_extra.h  world.cpp  world.h  world_pool.cpp  world_pool.h  worldpool.cpp  worldpool.h
